<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">


            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/iv_back_choose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardElevation="10dp"
                app:cardCornerRadius="25dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingTop="30dp">



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/log_icon"
                            android:tint="@color/back_colorr"
                            android:layout_gravity="center"/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="15dp">

                            <com.mxi.garbhsanskar.widget.MyEdittextLight
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_mobile" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            app:passwordToggleEnabled="true">

                            <com.mxi.garbhsanskar.widget.MyEdittextLight
                                android:id="@+id/editText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_password"
                                android:inputType="textPassword" />

                        </android.support.design.widget.TextInputLayout>

                        <com.mxi.garbhsanskar.widget.MyTextviewLight
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right|center"
                            android:paddingTop="5dp"
                            android:text="@string/forgot_password" />

                        <com.mxi.garbhsanskar.widget.RememberMe
                            android:id="@+id/rememberMe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|left"
                            android:text="@string/ch_remember" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:paddingTop="25dp">

                            <com.mxi.garbhsanskar.widget.MyButtonLight
                                android:id="@+id/btn_login"
                                style="?android:borderlessButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/button"
                                android:text="Sign In"
                                android:textAllCaps="true"
                                android:textColor="@color/parts_main" />

                        </LinearLayout>

                        <com.mxi.garbhsanskar.widget.MyTextviewLight
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/not_register"
                            android:paddingTop="10dp"/>

                        <com.mxi.garbhsanskar.widget.MyTextviewLight
                            android:id="@+id/tv_signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/not_register_two"
                            android:paddingTop="3dp"
                            android:textColor="@color/back_colorr"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp">

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>


    </FrameLayout>

</LinearLayout>
