<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/bottomm">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/iv_back_choose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|left"
                android:paddingLeft="20dp">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back"
                    android:tint="@color/white"/>

                <com.mxi.garbhsanskar.widget.MyTextviewLight
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sign Up"
                    android:textColor="@color/white"
                    android:paddingLeft="15dp"
                    android:gravity="center|left"
                    android:textSize="15sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingTop="40dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/avtart"/>


            </LinearLayout>

        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">



                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp">


                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="15dp">

                                <com.mxi.garbhsanskar.widget.MyEdittextLight
                                    android:id="@+id/tv_first_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/f_name" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="15dp">

                                <com.mxi.garbhsanskar.widget.MyEdittextLight
                                    android:id="@+id/tv_last_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/l_name" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="15dp">

                                <com.mxi.garbhsanskar.widget.MyEdittextLight
                                    android:id="@+id/tv_dob"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/dob"
                                    android:editable="false"
                                    android:inputType="none"/>

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="15dp">

                                <com.mxi.garbhsanskar.widget.MyEdittextLight
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="Pregnancy start date"
                                    android:editable="false"
                                    android:inputType="none"/>

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="15dp">

                                <com.mxi.garbhsanskar.widget.MyEdittextLight
                                    android:id="@+id/tv_mobileno"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/Mob"
                                    android:inputType="number"/>

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="15dp">

                                <com.mxi.garbhsanskar.widget.MyEdittextLight
                                    android:id="@+id/tv_email"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/email"
                                    android:inputType="textEmailAddress"/>

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="5dp"
                                app:passwordToggleEnabled="true">

                                <com.mxi.garbhsanskar.widget.MyEdittextLight
                                    android:id="@+id/tv_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/password"
                                    android:inputType="textPassword" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="5dp"
                                app:passwordToggleEnabled="true">

                                <com.mxi.garbhsanskar.widget.MyEdittextLight
                                    android:id="@+id/tv_confirm_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/c_password"
                                    android:inputType="textPassword" />

                            </android.support.design.widget.TextInputLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:paddingTop="10dp">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2">

                                    <Spinner
                                        android:id="@+id/sp_city"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:spinnerMode="dropdown">

                                    </Spinner>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2">

                                    <Spinner
                                        android:id="@+id/sp_state"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:spinnerMode="dropdown">

                                    </Spinner>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2">

                                    <Spinner
                                        android:id="@+id/sp_country"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:spinnerMode="dropdown">

                                    </Spinner>

                                </LinearLayout>


                            </LinearLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/back_colorr"
                                android:paddingTop="15dp"/>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="15dp">

                                <com.mxi.garbhsanskar.widget.MyEdittextLight
                                    android:id="@+id/tv_pincode"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/pincode"
                                    android:inputType="number"/>

                            </android.support.design.widget.TextInputLayout>







                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="8dp">

                            </LinearLayout>

                        </LinearLayout>


                    </LinearLayout>


                </android.support.v7.widget.CardView>



            </LinearLayout>

        </ScrollView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottomm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <com.mxi.garbhsanskar.widget.MyButtonLight
                android:id="@+id/btn_signup"
                style="?android:borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/signup"
                android:textAllCaps="true"
                android:textColor="@color/parts_main" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
