<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:background="@drawable/rectangle_radious">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:paddingLeft="30dp"
                            android:gravity="center"
                            android:paddingRight="30dp"
                            android:paddingTop="15dp">

                            <com.mxi.garbhsanskar.widget.MyTextviewLight
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="Change Password"
                                android:textSize="20sp"
                                android:gravity="center"
                                android:textColor="@color/back_colorr"
                                android:textStyle="bold"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:gravity="center"
                            android:paddingRight="15dp"
                            android:orientation="vertical">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="13dp"
                                app:passwordToggleEnabled="true">

                                <com.mxi.garbhsanskar.widget.MyEdittextLight
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/old_pass"
                                    android:inputType="textPassword" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="5dp"
                                app:passwordToggleEnabled="true">

                                <com.mxi.garbhsanskar.widget.MyEdittextLight
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/new_pass"
                                    android:inputType="textPassword" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="5dp"
                                app:passwordToggleEnabled="true">

                                <com.mxi.garbhsanskar.widget.MyEdittextLight
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/c_password"
                                    android:inputType="textPassword" />

                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_marginTop="5dp">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:gravity="center">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp">

                                    <com.mxi.garbhsanskar.widget.MyTextviewLight
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:text="Change"
                                        android:gravity="center"
                                        android:textStyle="normal"
                                        android:textColor="#ffff"
                                        android:background="@drawable/button"
                                        android:id="@+id/tv_exit_yes" />

                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:gravity="center">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp">

                                    <com.mxi.garbhsanskar.widget.MyTextviewLight
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:text="Cancle"
                                        android:gravity="center"
                                        android:textStyle="normal"
                                        android:textColor="#ffff"
                                        android:background="@drawable/button"
                                        android:id="@+id/tv_exit_no" />

                                </LinearLayout>

                            </LinearLayout>


                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </FrameLayout>


</LinearLayout>
